@@ -1,3 +1,7 @@
+9/27/2001
+	- jnamed can now listen on specific addresses, with the "address"
+	  keyword in the config file.
+
 9/23/2001
 	- 1.2.3 released
 
